--- a/index.html
+++ b/index.html
@@ -207,12 +207,71 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
     </section>
     <!-- Approach Section End  -->
+    <!-- Works Section Start  -->
+    <div class="works">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-12 text-center">
+                    <h1>Our Work</h1>
+                    <p>We are added our featured works below</p>
+                </div>
+            </div>
+
+            <div class="project">
+                <div class="row">
+                    <div class="col-md-3 text-center">
+                        <div class="project-1">
+                            <i class="fas fa-paper-plane"></i>
+                            <h3>Project Name</h3>
+                            <h4>Facebook marketing</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/cam.png" alt="" class="img-fluid w-100">
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="project-1">
+                            <i class="fas fa-paper-plane"></i>
+                            <h3>Project Name</h3>
+                            <h4>Facebook marketing</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/tree.png" alt="" class="img-fluid w-100">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="images/bridge.png" alt="" class="img-fluid w-100">
+                    </div>
+                    <div class="col-md-3 text-center">
+                        <div class="project-1">
+                            <i class="fas fa-paper-plane"></i>
+                            <h3>Project Name</h3>
+                            <h4>Facebook marketing</h4>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="images/jungle.png" alt="" class="img-fluid w-100">
+                    </div>
+
+                    <div class="col-md-3 text-center">
+                        <div class="project-1">
+                            <i class="fas fa-paper-plane"></i>
+                            <h3>Project Name</h3>
+                            <h4>Facebook marketing</h4>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Works Section End  -->
 
 
 
