--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             </div>
 
             <div class="project">
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col-md-3 text-center">
                         <div class="project-1">
                             <i class="fas fa-paper-plane"></i>
@@ -244,7 +244,7 @@
                         <img src="images/tree.png" alt="" class="img-fluid w-100">
                     </div>
                 </div>
-                <div class="row">
+                <div class="row no-gutters">
                     <div class="col-md-3">
                         <img src="images/bridge.png" alt="" class="img-fluid w-100">
                     </div>
