--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <li class="nav-item consult">
                         <a class="btn btn-danger" href="#">Free Consultation</a>
                     </li>
+                </ul>
             </div>
         </nav>
     </div>
@@ -272,6 +273,113 @@
         </div>
     </div>
     <!-- Works Section End  -->
+
+    <!-- contact section start  -->
+    <section class="contact">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-8 text-center">
+                    <h1>Get Your Free Facebook Analysis Now</h1>
+                    <p>Enter your details below</p>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-md-7 text-center">
+                    <div class="form">
+                        <a class="btn btn-icon" data-toggle="collapse" href="#contact" aria-expanded="false">
+                            <i class="fas fa-chevron-down"></i>
+                        </a>
+                        <div id="contact" class="collapse before">
+                            <div class="card card-body">
+                                <p>Sit down with our experts to receive a free customized marketing plan for your
+                                    business + Learn How To Use Google and Facebook to get 5000% ROI or more</p>
+                                <form action="">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Your Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="number" class="form-control" placeholder="Contact Number">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Company Name">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="submit" class="btn btn-danger" value="SUBMIT NOW">
+                                    </div>
+                                </form>
+                            </div>
+                            <a class="btn btn-close" data-toggle="collapse" href="#contact" aria-expanded="false">
+                                <i class="fas fa-times"></i>
+                            </a>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact section END  -->
+
+
+
+
+
+
+
+
+
+    <!-- Get in touch section Start  -->
+    <section class="get_in_touch py-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 text-center py-3">
+                    <h1>Get in touch</h1>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-md-3 m-auto text-center">
+                    <ul>
+                        <li class="fb2"><a href="https://www.facebook.com/STRIKERX0X/"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="tw2"><a href=""><i class="fab fa-twitter"></i></a></li>
+                        <li class="plus"><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+                        <li class="link"><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 text-center py-2">
+                    <p>Subscribe to our newsletter to stay update with what is new</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-7 m-auto pb-3">
+                    <form>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email Address">
+                        </div>
+                        <button type="submit" class="btn btn-primary Subscribe my-3">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Get in touch section End  -->
+
+    <!-- Footer section Start  -->
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center m-auto">
+                    <p>Cssauthor.com © 2014 All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer section END  -->
 
 
 
