--- a/index.html
+++ b/index.html
@@ -313,23 +313,13 @@
                                 <i class="fas fa-times"></i>
                             </a>
                         </div>
-
                     </div>
-
                 </div>
             </div>
         </div>
     </section>
 
     <!-- contact section END  -->
-
-
-
-
-
-
-
-
 
     <!-- Get in touch section Start  -->
     <section class="get_in_touch py-5">
@@ -342,10 +332,10 @@
             <div class="row justify-content-center">
                 <div class="col-md-3 m-auto text-center">
                     <ul>
-                        <li class="fb2"><a href="https://www.facebook.com/STRIKERX0X/"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="tw2"><a href=""><i class="fab fa-twitter"></i></a></li>
-                        <li class="plus"><a href=""><i class="fab fa-google-plus-g"></i></a></li>
-                        <li class="link"><a href=""><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="https://www.facebook.com/STRIKERX0X/"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                        <li><a href=""><i class="fab fa-google-plus-g"></i></a></li>
+                        <li><a href=""><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
             </div>
